--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>prova 4</h1>
+        <img src="linea_esperienza.png" alt="linea del tempo">
     </body>
 </html> 
