--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <h1>prova 4</h1>
-        <img src="linea_esperienza.png" width="300" height="auto" alt="linea del tempo">
+        <img src="linea_esperienza.png" style="width: 85vw; height: auto;" alt="linea del tempo">
     </body>
 </html> 
