--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>prova 4</h1>
+        <h1>Linda Scarano</h1>
+        <h2>Sviluppatrice Web Frontend Junior</h2>
         <img src="linea_esperienza.png"  alt="linea del tempo">
     </body>
 </html> 
