--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href="#myPage">Logo</a>
+                <a class="navbar-brand" href="#myPage">Io</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#about">ABOUT</a></li>
-                  <li><a href="#services">SERVICES</a></li>
+                  <li><a href="#chisono">CHI SONO</a></li>
+                  <li><a href="#cv">CV</a></li>
                   <li><a href="#portfolio">PORTFOLIO</a></li>
-                  <li><a href="#pricing">PRICING</a></li>
-                  <li><a href="#contact">CONTACT</a></li>
+                  <li><a href="#contact">CONTATTI</a></li>
                 </ul>
               </div>
             </div>
