--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="it">
-    <head>
-        <title>Linda Scarano</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="mycss.css">
-        <meta name="description" content="Front End Developer">
-        <meta name="keywords" content="HTML CSS JS">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    </head>
-    <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-              <div class="navbar-header">
+
+<head>
+    <title>Linda Scarano</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="mycss.css">
+    <meta name="description" content="Front End Developer">
+    <meta name="keywords" content="HTML CSS JS">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+<body id="io" data-spy="scroll" data-target=".navbar" data-offset="60">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>                        
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#myPage">Io</a>
-              </div>
-              <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#chisono">CHI SONO</a></li>
-                  <li><a href="#cv">CV</a></li>
-                  <li><a href="#portfolio">PORTFOLIO</a></li>
-                  <li><a href="#contact">CONTATTI</a></li>
-                </ul>
-              </div>
+                <a class="navbar-brand" href="#io">Io</a>
             </div>
-          </nav>
-    </body>
-</html> 
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#chisono">CHI SONO</a></li>
+                    <li><a href="#cv">CV</a></li>
+                    <li><a href="#portfolio">PORTFOLIO</a></li>
+                    <li><a href="#contatti">CONTATTI</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+    <div class="container-fluid bg-1 text-center">
+        <h3 class="margin">Chi sono?</h3>
+        <img src="fotoprofilo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird"
+            width="150" height="150">
+        <h3>Sviluppatrice Web Frontend</h3>
+    </div>
+
+
+</body>
+
+</html>
