--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="container-fluid bg-1 text-center">
         <h3 class="margin">Chi sono?</h3>
-        <img src="fotoprofilo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird"
+        <img src="fotoprofilo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="foto profilo"
             width="150" height="150">
         <h3>Sviluppatrice Web Frontend</h3>
     </div>
