--- a/index.html
+++ b/index.html
@@ -38,13 +38,38 @@
 
     </nav>
     <div class="container-fluid bg-1 text-center">
-        <h3 class="margin">Chi sono?</h3>
+        <h3 class="margin">Io</h3>
         <img src="fotoprofilo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="foto profilo"
             width="150" height="150">
         <h3>Sviluppatrice Web Frontend</h3>
     </div>
 
+    <div id="chisono" class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-signal logo"></span>
+            </div>
+            <div class="col-sm-8">
+                <h2>CHI SONO?</h2><br>
+                <h4>Mi presento:</h4><br>
+                <p>Laureata in ingegneria meccanica presso l’Università degli Studi di Roma Tor Vergata con laurea
+                    magistrale. Esperienze lavorative nel settore dell’efficienza energetica, nella consulenza grafica e
+                    come agente di vendita di prodotti e servizi in Italia e all’estero. Negli ultimi cinque mesi, per
+                    passione e per assecondare uno spiccato senso creativo, intraprende un nuovo percorso formativo come
+                    sviluppatrice web frontend. Certificata presso la W3schools.com come sviluppatrice HTML, CSS e
+                    JavaScript (portfolio di esperimenti di programmazione sulla piattaforma GitHub). Persona positiva,
+                    proattiva e motivata, capace di lavorare sotto pressione. Eccellenti capacità comunicative sia in
+                    italiano che in lingua inglese. Ottime capacità relazionali ed organizzative. Capacità di gestire il
+                    proprio lavoro sia autonomamente che all’interno di un team e per questo in grado di utilizzare
+                    Visual Studio Code integrato con Git. Appassionata di ritocco delle immagini in continuo
+                    aggiornamento con corsi online per migliorare l’utilizzo di Photoshop con il supporto della
+                    tavoletta grafica Wacom Intuos Pro M. Dinamica, attenta ai dettagli, flessibile e creativa con
+                    ottime capacità di analisi e problem solving.</p>
 
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
