--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
     <div id="chisono" class="container-fluid">
         <div class="row">
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-signal logo"></span>
+            <div class="col-sm-2">
+                <span class="glyphicon glyphicon-triangle-right logo"></span>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-10">
                 <h2>CHI SONO?</h2><br>
                 <h4>Mi presento:</h4><br>
                 <p>Laureata in ingegneria meccanica presso l’Università degli Studi di Roma Tor Vergata con laurea
