--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 
     <div id="chisono" class="container-fluid">
         <div class="row">
-            <div class="col-sm-2">
-                <span class="glyphicon glyphicon-triangle-right logo"></span>
-            </div>
+
             <div class="col-sm-10">
                 <h2>CHI SONO?</h2><br>
                 <h4>Mi presento:</h4><br>
@@ -67,7 +65,9 @@
                     ottime capacità di analisi e problem solving.</p>
 
             </div>
-
+            <div class="col-sm-2">
+                <span class="glyphicon glyphicon-pushpin logo"></span>
+            </div>
         </div>
     </div>
 </body>
