--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#chisono">CHI SONO</a></li>
+
                     <li><a href="#cv">CV</a></li>
                     <li><a href="#portfolio">PORTFOLIO</a></li>
                     <li><a href="#contatti">CONTATTI</a></li>
@@ -38,18 +39,18 @@
 
     </nav>
     <div class="container-fluid bg-1 text-center">
-        <h3 class="margin">Io</h3>
-        <img src="fotoprofilo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="foto profilo"
-            width="150" height="150">
-        <h3>Sviluppatrice Web Frontend</h3>
+        <h3 class="margin"></h3>
+        <img src="fotoprofilo.jpg" class="img-responsive img-circle" style="display:inline" alt="foto profilo"
+            width="200" height="200">
+        <h3 class="margin"> Sviluppatrice Web Frontend</h3>
     </div>
 
     <div id="chisono" class="container-fluid">
         <div class="row">
-
-            <div class="col-sm-10">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
                 <h2>CHI SONO?</h2><br>
-                <h4>Mi presento:</h4><br>
+
                 <p>Laureata in ingegneria meccanica presso l’Università degli Studi di Roma Tor Vergata con laurea
                     magistrale. Esperienze lavorative nel settore dell’efficienza energetica, nella consulenza grafica e
                     come agente di vendita di prodotti e servizi in Italia e all’estero. Negli ultimi cinque mesi, per
@@ -65,11 +66,39 @@
                     ottime capacità di analisi e problem solving.</p>
 
             </div>
-            <div class="col-sm-2">
-                <span class="glyphicon glyphicon-pushpin logo"></span>
-            </div>
+            <div class="col-sm-2"></div>
+
         </div>
     </div>
+
+    <div id="cv" class="container-fluid text-center">
+        <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <a href="https://www.linkedin.com/in/linda-scarano-2b204653/" target="_blank">
+                    <img class="margnin_right" src="logolinkedin.jpg" width="50px" height="auto" alt="linkedin">
+                </a>
+                <a href="https://github.com/lindascarano" target="_blank">
+                    <img class="margnin_right" src="logogithub.png" width="50px" height="auto" alt="github">
+                </a>
+                <a href="https://certification.w3schools.com/w3certified.asp?email=lindascarano@gmail.com"
+                    target="_blank">
+                    <img class="margnin_right" src="w3certified_logo.png" width="150px" height="auto" alt="w3schools">
+                </a>
+                <a href="CV Linda Scarano.pdf" class="btn btn-info btn-lg" target="_blank" download>
+                    <span class="glyphicon glyphicon-paperclip" width="50px" height="auto"></span> CV
+                </a>
+            </div>
+            <div class="col-sm-4"></div>
+        </div>
+    </div>
+
+    <footer class="container-fluid bg-1 text-center">
+        <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+    </footer>
+
+
+
 </body>
 
 </html>
