--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#chisono">CHI SONO</a></li>
-
-                    <li><a href="#cv">CV</a></li>
                     <li><a href="#portfolio">PORTFOLIO</a></li>
+                    <li><a href="CV Linda Scarano.pdf" target="_blank" download>
+                            <span class="glyphicon glyphicon-paperclip" width="50px" height="auto"></span> Scarica il
+                            mio CV
+                        </a></li>
                     <li><a href="#contatti">CONTATTI</a></li>
                 </ul>
             </div>
@@ -43,6 +45,10 @@
         <img src="fotoprofilo.jpg" class="img-responsive img-circle" style="display:inline" alt="foto profilo"
             width="200" height="200">
         <h3 class="margin"> Sviluppatrice Web Frontend</h3>
+        <a href="CV Linda Scarano.pdf" class="btn btn-info btn-lg" target="_blank" download>
+            <span class="glyphicon glyphicon-paperclip" width="50px" height="auto"></span> Scarica il mio Curriculum
+            Vitae
+        </a>
     </div>
 
     <div id="chisono" class="container-fluid">
@@ -71,7 +77,7 @@
         </div>
     </div>
 
-    <div id="cv" class="container-fluid text-center">
+    <div id="portfolio" class="container-fluid text-center">
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
@@ -85,11 +91,9 @@
                     target="_blank">
                     <img class="margnin_right" src="w3certified_logo.png" width="150px" height="auto" alt="w3schools">
                 </a>
-                <a href="CV Linda Scarano.pdf" class="btn btn-info btn-lg" target="_blank" download>
-                    <span class="glyphicon glyphicon-paperclip" width="50px" height="auto"></span> CV
-                </a>
+
             </div>
-            <div class="col-sm-4"></div>
+            <div class="col-sm-4"> </div>
         </div>
     </div>
 
