--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     </div>
 
     <footer class="container-fluid bg-1 text-center">
-        <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+        <p>Designed and developed by Linda Scarano</p>
+        <p> Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
     </footer>
 
 
