--- a/index.html
+++ b/index.html
@@ -77,15 +77,25 @@
         </div>
     </div>
 
-    <div id="portfolio" class="container-fluid text-center">
+
+    <footer id="contatti" class="container-fluid bg-1 ">
         <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
+            <div class="col-sm-2">
+
+            </div>
+            <div class="col-sm-8 text-center">
+
+                <p>Designed and developed by Linda Scarano</p>
+                <p> Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+                <h4>-</h4>
+                <p><span class="glyphicon glyphicon-map-marker"></span> Roma, IT &#8226;
+                <span class="glyphicon glyphicon-phone"></span> +39 3911472953 &#8226; 
+                <span class="glyphicon glyphicon-envelope"></span> lindascarano@gmail.com</p>
                 <a href="https://www.linkedin.com/in/linda-scarano-2b204653/" target="_blank">
-                    <img class="margnin_right" src="logolinkedin.jpg" width="50px" height="auto" alt="linkedin">
+                    <img class="margnin_right" src="logolinkedin.jpg" width="30px" height="auto" alt="linkedin">
                 </a>
                 <a href="https://github.com/lindascarano" target="_blank">
-                    <img class="margnin_right" src="logogithub.png" width="50px" height="auto" alt="github">
+                    <img class="margnin_right" src="logogithub.png" width="30px" height="auto" alt="github">
                 </a>
                 <a href="https://certification.w3schools.com/w3certified.asp?email=lindascarano@gmail.com"
                     target="_blank">
@@ -93,13 +103,10 @@
                 </a>
 
             </div>
-            <div class="col-sm-4"> </div>
-        </div>
-    </div>
+            <div class="col-sm-2"></div>
 
-    <footer class="container-fluid bg-1 text-center">
-        <p>Designed and developed by Linda Scarano</p>
-        <p> Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+        </div>
+
     </footer>
 
 
