--- a/index.html
+++ b/index.html
@@ -78,19 +78,33 @@
     </div>
 
 
-    <footer id="contatti" class="container-fluid bg-1 ">
-        <div class="row">
-            <div class="col-sm-2">
+    <div id="contatti" class="container-fluid bg-grey">
+
+        <div class="row text-center">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+
 
             </div>
-            <div class="col-sm-8 text-center">
+            <div class="col-sm-4"></div>
 
-                <p>Designed and developed by Linda Scarano</p>
-                <p> Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-                <h4>-</h4>
-                <p><span class="glyphicon glyphicon-map-marker"></span> Roma, IT &#8226;
-                <span class="glyphicon glyphicon-phone"></span> +39 3911472953 &#8226; 
-                <span class="glyphicon glyphicon-envelope"></span> lindascarano@gmail.com</p>
+        </div>
+    </div>
+
+
+
+
+    <footer class="container-fluid bg-1">
+        <div class="row">
+            <div class="col-sm-4"> <p>Designed and developed by Linda Scarano</p>
+                <p > Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
+               
+            </div>
+            <div class="col-sm-4">
+                <p><span class="glyphicon glyphicon-map-marker"></span> Roma, IT</p>
+                <p><span class="glyphicon glyphicon-phone"></span> +39 3911472953 &#8226; <span class="glyphicon glyphicon-envelope"></span> lindascarano@gmail.com</p>
+            </div>
+            <div class="col-sm-4 text-center">
                 <a href="https://www.linkedin.com/in/linda-scarano-2b204653/" target="_blank">
                     <img class="margnin_right" src="logolinkedin.jpg" width="30px" height="auto" alt="linkedin">
                 </a>
@@ -101,11 +115,10 @@
                     target="_blank">
                     <img class="margnin_right" src="w3certified_logo.png" width="150px" height="auto" alt="w3schools">
                 </a>
-
             </div>
-            <div class="col-sm-2"></div>
 
         </div>
+
 
     </footer>
 
