--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
 
         <div class="row text-center">
             <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-
-
-            </div>
+            <div class="col-sm-4"></div>
             <div class="col-sm-4"></div>
 
         </div>
@@ -94,17 +91,19 @@
 
 
 
-    <footer class="container-fluid bg-1">
+    <footer class="container-fluid bg-1 text-center">
         <div class="row">
-            <div class="col-sm-4"> <p>Designed and developed by Linda Scarano</p>
-                <p > Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
-               
+            <div class="col-sm-4">
+
+                <p><span class="glyphicon glyphicon-map-marker"></span> Roma, IT</p>
+                <p><span class="glyphicon glyphicon-phone"></span> +39 3911472953</p>
+                <p><span class="glyphicon glyphicon-envelope"></span> lindascarano@gmail.com</p>
+            </div>
+            <div class="col-sm-4 margin">
+                <p>Designed and developed by Linda Scarano</p>
+                <p> Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p>
             </div>
             <div class="col-sm-4">
-                <p><span class="glyphicon glyphicon-map-marker"></span> Roma, IT</p>
-                <p><span class="glyphicon glyphicon-phone"></span> +39 3911472953 &#8226; <span class="glyphicon glyphicon-envelope"></span> lindascarano@gmail.com</p>
-            </div>
-            <div class="col-sm-4 text-center">
                 <a href="https://www.linkedin.com/in/linda-scarano-2b204653/" target="_blank">
                     <img class="margnin_right" src="logolinkedin.jpg" width="30px" height="auto" alt="linkedin">
                 </a>
