--- a/index.html
+++ b/index.html
@@ -59,17 +59,27 @@
 
                 <p>Laureata in ingegneria meccanica presso l’Università degli Studi di Roma Tor Vergata con laurea
                     magistrale. Esperienze lavorative nel settore dell’efficienza energetica, nella consulenza grafica e
-                    come agente di vendita di prodotti e servizi in Italia e all’estero. Negli ultimi cinque mesi, per
-                    passione e per assecondare uno spiccato senso creativo, intraprende un nuovo percorso formativo come
-                    sviluppatrice web frontend. Certificata presso la W3schools.com come sviluppatrice HTML, CSS e
-                    JavaScript (portfolio di esperimenti di programmazione sulla piattaforma GitHub). Persona positiva,
-                    proattiva e motivata, capace di lavorare sotto pressione. Eccellenti capacità comunicative sia in
-                    italiano che in lingua inglese. Ottime capacità relazionali ed organizzative. Capacità di gestire il
-                    proprio lavoro sia autonomamente che all’interno di un team e per questo in grado di utilizzare
-                    Visual Studio Code integrato con Git. Appassionata di ritocco delle immagini in continuo
-                    aggiornamento con corsi online per migliorare l’utilizzo di Photoshop con il supporto della
-                    tavoletta grafica Wacom Intuos Pro M. Dinamica, attenta ai dettagli, flessibile e creativa con
-                    ottime capacità di analisi e problem solving.</p>
+                    come agente di vendita di prodotti e servizi in Italia e all’estero. Nel 2018 intraprende una nuova
+                    attività di web designer che viene approfondita con un percorso formativo come sviluppatrice web
+                    frontend. Certificata presso la W3schools.com come sviluppatrice HTML, CSS e JavaScript. Persona
+                    positiva, proattiva e motivata, capace di lavorare sotto pressione. Eccellenti capacità comunicative
+                    sia in italiano che in lingua inglese. Ottime capacità relazionali ed organizzative. Capacità di
+                    gestire il proprio lavoro sia autonomamente che all’interno di un team. Competenze nel fotoritocco
+                    in continuo aggiornamento con corsi online per migliorare l’utilizzo di Photoshop. Dinamica, attenta
+                    ai dettagli, flessibile e creativa con ottime capacità di analisi e problem solving.</p>
+                <p>
+                <pre>
+                    - Capacità nell'utilizzo dei codici HTML, CSS, JavaScript per lo sviluppo di siti web responsive, mobile-first.
+                    - Capacità nell’utilizzo del framework Bootstrap3.
+                    - Conoscenza di WordPress ed esperienza nell'utilizzo dei temi e plugin.
+                    - Competenza nell’utilizzo dell’editor di sviluppo Visual Studio Code integrato con Git.
+                    - Capacità di scrivere codice per implementare elementi visivi.
+                    - Flessibilità nell'adattarsi a variazioni di istruzioni e requisiti.
+                    - Interesse per l'aggiornamento continuo nel settore dello sviluppo e di eventuali progressi tecnologici.
+                   
+                    
+                </pre>
+                </p>
 
             </div>
             <div class="col-sm-2"></div>
