--- a/index.html
+++ b/index.html
@@ -67,17 +67,15 @@
                     gestire il proprio lavoro sia autonomamente che all’interno di un team. Competenze nel fotoritocco
                     in continuo aggiornamento con corsi online per migliorare l’utilizzo di Photoshop. Dinamica, attenta
                     ai dettagli, flessibile e creativa con ottime capacità di analisi e problem solving.</p>
-                <p>
-                <pre>
-                - Capacità nell'utilizzo dei codici HTML, CSS, JavaScript per lo sviluppo di siti web responsive, mobile-first.
-                - Capacità nell’utilizzo del framework Bootstrap3.
-                - Conoscenza di WordPress ed esperienza nell'utilizzo dei temi e plugin.
-                - Competenza nell’utilizzo dell’editor di sviluppo Visual Studio Code integrato con Git.
-                - Capacità di scrivere codice per implementare elementi visivi.
-                - Flessibilità nell'adattarsi a variazioni di istruzioni e requisiti.
-                - Interesse per l'aggiornamento continuo nel settore dello sviluppo e di eventuali progressi tecnologici.
-                </pre>
-                </p>
+                
+                <p>- Capacità nell'utilizzo dei codici HTML, CSS, JavaScript per lo sviluppo di siti web responsive, mobile-first.</p>
+                <p>- Capacità nell’utilizzo del framework Bootstrap3.</p>
+                <p>- Conoscenza di WordPress ed esperienza nell'utilizzo dei temi e plugin.</p>
+                <p>- Competenza nell’utilizzo dell’editor di sviluppo Visual Studio Code integrato con Git.</p>
+                <p>- Capacità di scrivere codice per implementare elementi visivi.</p>
+                <p>- Flessibilità nell'adattarsi a variazioni di istruzioni e requisiti.</p>
+                <p>- Interesse per l'aggiornamento continuo nel settore dello sviluppo e di eventuali progressi tecnologici.</p>
+                
 
             </div>
             <div class="col-sm-2"></div>
