--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     sia in italiano che in lingua inglese. Ottime capacità relazionali ed organizzative. Capacità di
                     gestire il proprio lavoro sia autonomamente che all’interno di un team. Competenze nel fotoritocco
                     in continuo aggiornamento con corsi online per migliorare l’utilizzo di Photoshop. Dinamica, attenta
-                    ai dettagli, flessibile e creativa con ottime capacità di analisi e problem solving.</p>
-                
+                    ai dettagli, flessibile e creativa con ottime capacità di analisi e problem solving.</p><br>
+                <h2>COMPETENZE</h2><br>
                 <p>- Capacità nell'utilizzo dei codici HTML, CSS, JavaScript per lo sviluppo di siti web responsive, mobile-first.</p>
                 <p>- Capacità nell’utilizzo del framework Bootstrap3.</p>
                 <p>- Conoscenza di WordPress ed esperienza nell'utilizzo dei temi e plugin.</p>
