--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     in continuo aggiornamento con corsi online per migliorare l’utilizzo di Photoshop. Dinamica, attenta
                     ai dettagli, flessibile e creativa con ottime capacità di analisi e problem solving.</p><br>
                 <h2>COMPETENZE</h2><br>
-                <p>- Capacità nell'utilizzo dei codici HTML, CSS, JavaScript per lo sviluppo di siti web responsive, mobile-first.</p>
+                <p>- Capacità nell'utilizzo dei codici HTML5, CSS3, JavaScript ES6 per lo sviluppo di siti web responsive, mobile-first.</p>
                 <p>- Capacità nell’utilizzo del framework Bootstrap3.</p>
                 <p>- Conoscenza di WordPress ed esperienza nell'utilizzo dei temi e plugin.</p>
                 <p>- Competenza nell’utilizzo dell’editor di sviluppo Visual Studio Code integrato con Git.</p>
